adding Readme.md

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
            
             <input type="text" placeholder="Name">
             <input type="text" placeholder="Email">
-            <input type="text" placeholder="feeback">
+            <input type="text" placeholder="feeback"><br>
             <div class="btn">
-                <button>Send</button>
+                <button class="btn-lg btn-secondary">Send</button>
             </div>
         </div>
         <div class="photo2">
