--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
             <input type="text" placeholder="Name">
             <input type="text" placeholder="Email">
             <input type="text" placeholder="feeback"><br>
-            <div class="btn">
-                <button class="btn-lg btn-secondary">Send</button>
-            </div>
+            <button class="btn-lg btn-secondary bookNow">send</button>
         </div>
         <div class="photo2">
             <img src="./images/19-long-hair-locs-with-square-parting-CEDQMZjJnZV.webp" alt="">
